src/components/Todo/TodoEntry/TodoEntry.css
/* Todo Colums */
.todo-columns{
    display: flex;
    flex-direction: column;
    border: 1px solid rgb(200, 187, 187);
    border-radius: 10px;
    margin: 2px;
}

/* TodoEntry */
.todo-entry {
    background-color: rgb(255, 255, 255);
    margin-bottom: 3px;
    padding: 10px;
    border-radius: 10px;
    margin: 5px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.todo-entry:hover {
    transform: scale(1.02);
    background-color: rgba(123, 31, 162, 1);
    color: white
}

.todo-item,
.done-item,
.doing-item {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.done-text {
    text-decoration: line-through;
    margin-left: 40px;
}

.material-icons.todo-entry-icon {
    width: 24px;
    cursor: pointer;
}

/* button */

.entryButton:disabled {
    background-color: #eae4e3;
    border: 1px solid rgba(144, 131, 131, 0.856);
    cursor: not-allowed;
    color: #887571;
    opacity: 0.5;
}

.moreDoneButton {
    align-self: self-end;
}

.entryButton {
    margin: 1px;
    width: 32px;
    height: 24px;
    background-color: rgba(234, 228, 227, 0);
    border: 1px solid rgba(144, 131, 131, 0.856);
    cursor: pointer;
    /* Add cursor pointer */
    position: relative;
    /* Position relative for absolute centering */
    color: #887571;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
}

.entryButton:hover {
    /* Darker green background color on hover */
    border: 1px solid rgba(255, 255, 255, 0.856);
    cursor: pointer;
    color: #ffffff;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
}

/* timestamps */
.time {
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: fit-content;
    align-items: flex-start;
   
}

.time-stamp {
    font-size: x-small;
    line-height: 1;
}

.separator {
    border-left: 1px solid rgb(0, 0, 0);
    margin-left: 10px;
    margin-right: 10px;
    height: auto;
    padding: 5px 0;
}

.due-soon {
    color: red;
    transform: scale(1.1);
    margin-left: 7px;
}

/* ButtonPanel */
.buttons {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    height: 100px;

}

/* Information-container */

.information-container {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: center;
    width: auto;
    height: auto;
}

.information-top {
    display: flex;
    flex-direction: row;
    align-items: left;
    justify-content: left;
    width: auto;
    height: auto;
}

.information-time, 
.information-diff, 
.information-steps {
    display: flex;
    flex-direction: row;
    align-items: left;
    justify-content: left;
    width: auto;
    height: auto;
    gap: 8px;
}

.information-container p {
    font-size: small;
}

.information-container > * {
    margin: 4px;
}

.information-dif {
    display: flex;
    flex-direction: row;
    width: auto;
    height: auto;
    padding: 4px;
}

.information {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: auto;
    height: auto;
}
/* More Info */
.more-information {
    background-color: rgb(187, 186, 186);
    margin-bottom: 3px;
    padding: 10px;
    border-radius: 10px;
    display: grid;
    grid-auto-rows: min-content;
    grid-template-rows: auto 1fr;
    grid-template-columns: 2fr 1fr;
    align-items: center;
    align-self: center;
    width: 90%;
    gap: 5px;
}

.more-information p {
    margin: 0
}

.steps-container, 
.description-container {
    display: flex;
    flex-direction: column;
    align-items: auto;
    justify-content: center;
    width: auto;
    height: 100%;
    text-align: top;
    background-color: rgb(201, 201, 202);
    border-radius: 10px;
    padding: 5px;
}

.description-container p {
}

/* Steps */
.steps-label,
.description-label {
padding: 2px
}

.step-entry {
    display: flex;
    align-items: center;
    margin: 5px;
    background-color: #e1d7d7;
    border-radius: 10px;
    padding: 6px;;
}

.step-entry:hover {
    transform: scale(1.05);
    background-color: var(--secondary-color);
    color: white;
    cursor: pointer;
}

.step-id {
    margin-right: 10px; /* Adjust this value based on your needs */
}

.step-name {
    flex-grow: 1;
    cursor: pointer;
}

.step-name-doing {
    flex-grow: 1;
    cursor: pointer;
}

.step-name-doing:hover {
    text-decoration: line-through ;
}

.add-step {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.step-completed {
    text-decoration: line-through;
  }

.more-information-loggedOut-message {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    text-align: center;
    width: 100%;
    padding: 10px;
}

.more-information-loggedOut{
    background-color: rgb(187, 186, 186);
    margin-bottom: 3px;
    padding: 10px;
    border-radius: 10px;
    display: flex;
    flex: column;
    align-items: center;
    align-self: center;
    width: 90%;
}

/* Animations */
@keyframes vibrate {
    0% { transform: translate(0); }
    10% { transform: translate(-2px, 2px); }
    20% { transform: translate(-2px, -2px); }
    30% { transform: translate(2px, 2px); }
    40% { transform: translate(2px, -2px); }
    50% { transform: translate(-2px, 2px); }
    60% { transform: translate(-2px, -2px); }
    70% { transform: translate(2px, 2px); }
    80% { transform: translate(2px, -2px); }
    90% { transform: translate(-2px, 2px); }
    100% { transform: translate(0); }
}

.vibrate {
    animation: vibrate 0.5s linear;
}

/* tags */
.tags-container-entry {
    display: inline-flex;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 5px;
    justify-content: center;
    border-radius: 10px;
    padding: 4px;
    width: auto;
}

